--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -110,8 +110,10 @@ footer {
         }
 
         .social-links {
+          gap: 10px;
           img {
-            width: 50%;
+            width: 20px;
+            height: 20px;
           }
         }
       }
