--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -6,6 +6,7 @@
 @import '../../scss/partials/get-connected-footer';
 @import '../../scss/partials/index-form';
 @import '../../scss/partials/text-styling';
+@import '../../scss/partials/hamburger';
 
 .section1 {
     @include center(horizontal);
