--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -383,31 +383,83 @@ footer {
   #join-us p {
     font-size: 25px;
   }
-  .connection-container {
+  #join-us .connection-container {
     display: flex;
     flex-direction: column;
     padding-bottom: 8%;
   }
-  .connection-container div {
+  #join-us .connection-container div {
     display: flex;
     justify-content: center;
     text-align: center;
     color: white;
   }
-  .connection-container div a h3 {
+  #join-us .connection-container div a h3 {
     width: 100%;
   }
-  .connection-container div img {
+  #join-us .connection-container div img {
     width: 40%;
   }
-  .connection-container .form-container {
+  #join-us .connection-container .form-container {
     width: 100%;
     margin-top: 5%;
     display: flex;
     flex-direction: column;
   }
-  .connection-container .form-container form, .connection-container .form-container h3 {
+  #join-us .connection-container .form-container form, #join-us .connection-container .form-container h3 {
     right: 0;
+  }
+}
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #mobileMenu {
+    display: none !important;
+  }
+  #mobileMenu.show {
+    display: flex !important;
+    flex-direction: column;
+  }
+  .top {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    width: 200px;
+    padding: 20px;
+    border-radius: 0 0 0 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    margin-right: -2.5%;
+  }
+  .top a {
+    padding: 10px 0;
+    font-size: 1rem;
+    width: 100%;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+  }
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
+    position: absolute;
+    right: 20px;
+    top: 5%;
+    transform: translateY(-50%);
+    z-index: 1001;
+  }
+  .hamburger span {
+    width: 25px;
+    height: 3px;
+    background: white;
+    border-radius: 2px;
+  }
+  .block-link {
+    text-align: center !important;
   }
 }
 .blog-hero {
@@ -436,6 +488,10 @@ footer {
   justify-content: center;
   padding: 60px 20px;
   background-color: white;
+}
+.blog-posts h2 {
+  font-size: 80px;
+  color: gray;
 }
 
 .blog-card {
