--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -171,30 +171,30 @@ footer {
   #join-us p {
     font-size: 25px;
   }
-  .connection-container {
+  #join-us .connection-container {
     display: flex;
     flex-direction: column;
     padding-bottom: 8%;
   }
-  .connection-container div {
+  #join-us .connection-container div {
     display: flex;
     justify-content: center;
     text-align: center;
     color: white;
   }
-  .connection-container div a h3 {
+  #join-us .connection-container div a h3 {
     width: 100%;
   }
-  .connection-container div img {
+  #join-us .connection-container div img {
     width: 40%;
   }
-  .connection-container .form-container {
+  #join-us .connection-container .form-container {
     width: 100%;
     margin-top: 5%;
     display: flex;
     flex-direction: column;
   }
-  .connection-container .form-container form, .connection-container .form-container h3 {
+  #join-us .connection-container .form-container form, #join-us .connection-container .form-container h3 {
     right: 0;
   }
 }
@@ -754,5 +754,8 @@ footer nav {
   }
   .connection-container div {
     text-align: center;
+  }
+  .social-media {
+    bottom: 50px;
   }
 }/*# sourceMappingURL=about-us-styling.css.map */
