--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -216,6 +216,9 @@ footer nav {
   left: 80%;
   bottom: 80px;
 }
+.social-media h3 {
+  font-size: 35px;
+}
 .social-media .social-links {
   display: flex;
   gap: 25px;
@@ -227,6 +230,9 @@ footer nav {
 }
 
 @media screen and (max-width: 768px) {
+  footer {
+    overflow-x: hidden;
+  }
   h1 {
     font-size: 2.5rem;
   }
@@ -242,10 +248,11 @@ footer nav {
     font-size: 0.8rem;
   }
   .social-media {
-    left: 75%;
+    bottom: 50px;
+    left: 70%;
   }
-  .social-media h2 {
-    font-size: 1.5rem;
+  .social-media h3 {
+    font-size: 1rem;
   }
   .social-media .social-links {
     gap: 10px;
@@ -529,4 +536,13 @@ footer {
 }
 .blog-card .read-more:hover {
   background-color: #333;
+}
+
+@media screen and (max-width: 768px) {
+  .blog-hero h1 {
+    font-size: 2.5rem;
+  }
+  .blog-posts h2 {
+    text-align: center;
+  }
 }/*# sourceMappingURL=blogs-home-styling.css.map */
