--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -82,4 +82,19 @@
       }
     }
   }
+
+@media screen and (max-width: 768px) {
+
+    .blog-hero h1 {
+        font-size: $font-h1-mobile;
+    }
+
+    .blog-posts {
+
+        h2 {
+            text-align: center;
+        }
+    }
+
+  }
   
