--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -489,10 +489,6 @@ header p {
     margin-top: 10%;
    }
 
-   .section5 {
-    margin-top: 5%;
-   }
-
    footer p {
     margin-left: 5%;
     font-size: $font-p-mobile;
@@ -522,6 +518,10 @@ header p {
 
   .section2 h2 {
     align-self: flex-start;
+  }
+
+  .social-media {
+    bottom: 80px;
   }
 
 
