--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -65,7 +65,9 @@ footer {
     left: 80%;
     bottom: 80px;
     
-    
+    h3 {
+      font-size: $font-h3-size;
+    }
 
     .social-links {
       @include flex();
@@ -81,6 +83,10 @@ footer {
 
 
   @media screen and (max-width: 768px) {
+
+    footer {
+      overflow-x: hidden;
+    }
 
     h1 {
         font-size: $font-h1-mobile;
@@ -103,10 +109,11 @@ footer {
 
       .social-media {
 
-        left: 75%;
+        bottom: 50px;
+        left: 70%;
 
-        h2 {
-          font-size: $font-h2-mobile;
+        h3 {
+          font-size: $font-h3-mobile;
         }
 
         .social-links {
