--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -344,6 +344,9 @@ footer nav {
   left: 80%;
   bottom: 80px;
 }
+.social-media h3 {
+  font-size: 35px;
+}
 .social-media .social-links {
   display: flex;
   gap: 25px;
@@ -355,6 +358,9 @@ footer nav {
 }
 
 @media screen and (max-width: 768px) {
+  footer {
+    overflow-x: hidden;
+  }
   h1 {
     font-size: 2.5rem;
   }
@@ -370,10 +376,11 @@ footer nav {
     font-size: 0.8rem;
   }
   .social-media {
-    left: 75%;
+    bottom: 50px;
+    left: 70%;
   }
-  .social-media h2 {
-    font-size: 1.5rem;
+  .social-media h3 {
+    font-size: 1rem;
   }
   .social-media .social-links {
     gap: 10px;
