--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -322,6 +322,7 @@ header p {
   .credits {
     @include center(horizontal);
     margin-bottom: 2.5%;
+    margin-top: -5%;
   }
 
   .credits a {
