--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -51,8 +51,8 @@ footer {
 
   .credits {
     @include center(horizontal);
-    margin-top: 2.5%;
     margin-bottom: 2.5%;
+    margin-top: -5%;
   }
 
   .credits a {
@@ -63,7 +63,7 @@ footer {
     @include flex-column();
     position: relative;
     left: 80%;
-    bottom: 80px;
+    bottom: 100px;
     
     h3 {
       font-size: $font-h3-size;
@@ -79,6 +79,21 @@ footer {
       }
     }
 
+  }
+
+  .disclaimer {
+
+    @include flex-column();
+    @include center(horizontal);
+    margin-right: 5%;
+    h3 {
+      font-size: $font-h3-mobile;
+    }
+
+    p {
+      margin-top: 0.5%;
+      font-size: $font-p-mobile;
+    }
   }
 
 
