added target blanks to most links and added text hover styling to Discord link

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -211,6 +211,13 @@ h1 {
   color: white;
   text-decoration: none;
 }
+.connection-container a p {
+  text-decoration: underline;
+}
+
+.connection-container a:hover p {
+  text-decoration: none;
+}
 
 footer {
   padding-top: 2.5%;
