--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -28,6 +28,16 @@
 
   .connection-container a {
     @include link-style(white);
+    
+    p {
+      text-decoration: underline;
+    }
+  }
+
+  .connection-container a:hover {
+    p {
+      text-decoration: none;
+    }
   }
 
 footer {
