--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -278,6 +278,13 @@ footer {
   color: white;
   text-decoration: none;
 }
+.connection-container a p {
+  text-decoration: underline;
+}
+
+.connection-container a:hover p {
+  text-decoration: none;
+}
 
 footer {
   padding-top: 2.5%;
@@ -706,7 +713,6 @@ footer nav {
   justify-content: center;
   text-align: center;
   margin-bottom: 2.5%;
-  margin-top: -5%;
 }
 
 .credits a {
