--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -171,30 +171,33 @@ footer {
   #join-us p {
     font-size: 25px;
   }
-  #join-us .connection-container {
+  .connection-container {
     display: flex;
     flex-direction: column;
     padding-bottom: 8%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
   }
-  #join-us .connection-container div {
+  .connection-container div {
     display: flex;
     justify-content: center;
     text-align: center;
     color: white;
   }
-  #join-us .connection-container div a h3 {
+  .connection-container div a h3 {
     width: 100%;
   }
-  #join-us .connection-container div img {
+  .connection-container div img {
     width: 40%;
   }
-  #join-us .connection-container .form-container {
+  .connection-container .form-container {
     width: 100%;
     margin-top: 5%;
     display: flex;
     flex-direction: column;
   }
-  #join-us .connection-container .form-container form, #join-us .connection-container .form-container h3 {
+  .connection-container .form-container form, .connection-container .form-container h3 {
     right: 0;
   }
 }
