--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -421,6 +421,9 @@ footer {
     justify-content: center;
     text-align: center;
   }
+  .connection-container a {
+    text-align: center;
+  }
   .connection-container div {
     display: flex;
     justify-content: center;
