--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -456,6 +456,9 @@ footer {
     justify-content: center;
     text-align: center;
   }
+  .connection-container a {
+    text-align: center;
+  }
   .connection-container div {
     display: flex;
     justify-content: center;
