--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -179,6 +179,9 @@ footer {
     justify-content: center;
     text-align: center;
   }
+  .connection-container a {
+    text-align: center;
+  }
   .connection-container div {
     display: flex;
     justify-content: center;
