--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -14,6 +14,8 @@
     color: black;
     text-align: center;
     padding: 80px 20px;
+    z-index: -5;
+    position: relative;
   
     h1 {
       font-size: $font-h1-size;
