--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -46,7 +46,7 @@ html {
 .top {
   position: absolute;
   right: 2.5%;
-  top: 5%;
+  top: 12%;
   display: flex;
   gap: 45px;
   display: flex;
@@ -65,26 +65,27 @@ html {
   text-decoration: underline;
 }
 
-.top-bar {
-  position: absolute;
-  top: 0;
-  background-color: black;
-  width: 100vw;
-  height: 120px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 header p {
   position: absolute;
-  top: 6%;
+  top: 13%;
   left: 5%;
   font-weight: 600;
-  font-size: 25px;
+  font-size: 30px;
   display: flex;
   align-items: center;
   text-align: center;
   color: white;
   text-decoration: none;
+}
+
+.top-bar {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  width: 100vw;
+  height: 165px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
 
 .block-link {
@@ -278,6 +279,7 @@ footer nav {
   justify-content: center;
   text-align: center;
   margin-right: 5%;
+  margin-bottom: 2.5%;
 }
 .disclaimer h3 {
   font-size: 1rem;
