--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -351,6 +351,7 @@ footer nav {
   justify-content: center;
   text-align: center;
   margin-right: 5%;
+  margin-bottom: 2.5%;
 }
 .disclaimer h3 {
   font-size: 1rem;
@@ -393,37 +394,50 @@ footer nav {
     height: 20px;
   }
 }
-body {
-  margin-top: 15%;
+.download-button {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  background-color: black;
+  font-size: 40px;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  border-radius: 15px;
+  display: inline-block;
+  margin: auto;
+}
+.download-button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-decoration: none !important;
 }
 
-.section1 {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+@media screen and (max-width: 768px) {
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    font-size: 1rem;
+  }
 }
-
 .top {
   position: absolute;
   right: 2.5%;
-  top: 5%;
+  top: 12%;
   display: flex;
   gap: 45px;
   display: flex;
   align-items: center;
   text-align: center;
-  z-index: 1000;
-}
-
-.top-bar {
-  position: absolute;
-  top: 0;
-  background-color: black;
-  width: 100vw;
-  height: 120px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .top a {
@@ -439,7 +453,7 @@ body {
 
 header p {
   position: absolute;
-  top: 6%;
+  top: 13%;
   left: 5%;
   font-weight: 600;
   font-size: 30px;
@@ -448,6 +462,16 @@ header p {
   text-align: center;
   color: white;
   text-decoration: none;
+}
+
+.top-bar {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  width: 100vw;
+  height: 165px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
 
 .block-link {
@@ -465,6 +489,58 @@ header p {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   text-decoration: none !important;
+}
+
+.section1 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+h1 {
+  font-size: 80px;
+  margin-top: 12%;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .top {
+    gap: 8px;
+    top: 3.25%;
+  }
+  .top a {
+    font-size: 14px;
+  }
+  .top-bar {
+    height: 70px;
+  }
+  .block-link {
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-size: 10px !important;
+  }
+  header p {
+    font-size: 0.85rem;
+    top: 4%;
+    color: white;
+    text-decoration: none;
+  }
+  .section1 {
+    margin-top: 10%;
+    overflow-x: hidden;
+  }
+}
+.section1 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -569,10 +645,6 @@ h1 {
   right: -15%;
   left: auto;
   flex-direction: row;
-}
-.text-and-line.third .text-content {
-  align-items: right;
-  text-align: right;
 }
 
 .text-and-line.fourth {
