--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -12,66 +12,13 @@
 
 @import 'partials/get-connected-footer';
 
-body {
-    margin-top: 15%;
-}
+@import 'partials/header';
 
 .section1 {
     @include center(horizontal);
     @include flex-column();
 }
 
-
-.top {
-    position: absolute;
-    right: 2.5%;
-    top: 5%;
-    display: flex;
-    gap: 45px;
-    @include center(vertical);
-    z-index: 1000;
-}
-
-.top-bar {
-    position: absolute;
-    top: 0;
-    background-color: black;
-    width: 100vw;
-    height: 120px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-
-.top a {
-    @include link-style(white);
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.top a:hover {
-    text-decoration: underline;
-}
-
-header p {
-    position: absolute;
-    top: 6%;
-    left: 5%;
-    font-weight: 600;
-    font-size: 30px;
-    @include center(vertical);
-    @include link-style(white);
-}
-
-.block-link {
-    background-color: white;
-    color: black !important;
-    border-radius: 8px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-    @include hover-rise();
-}
 
 h1 {
     font-size: $font-h1-size;
@@ -180,10 +127,6 @@ h1 {
     left: auto;
     flex-direction: row; // line -> text (flip because on right)
     
-    .text-content {
-      align-items: right;
-      text-align: right;
-    }
   }
   
   .text-and-line.fourth {
