--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -14,55 +14,9 @@
 
 @import 'partials/get-connected-footer';
 
+@import 'partials/header';
 
-.top {
-    position: absolute;
-    right: 2.5%;
-    top: 5%;
-    display: flex;
-    gap: 45px;
-    @include center(vertical);
-}
 
-.top-bar {
-    position: absolute;
-    top: 0;
-    background-color: black;
-    width: 100vw;
-    height: 120px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-.top a {
-    @include link-style(white);
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.top a:hover {
-    text-decoration: underline;
-}
-
-header p {
-    position: absolute;
-    top: 6%;
-    left: 5%;
-    font-weight: 600;
-    font-size: 30px;
-    @include center(vertical);
-    @include link-style(white);
-}
-
-.block-link {
-    background-color: white;
-    color: black !important;
-    border-radius: 8px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-    @include hover-rise();
-}
 
 .section1 {
     @include center(horizontal);
