--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -120,15 +120,14 @@ h1 {
   h1 {
     font-size: 2.5rem;
   }
+  .top-bar {
+    height: 125px;
+  }
   .top {
     gap: 8px;
-    top: 3.25%;
   }
   .top a {
     font-size: 14px;
-  }
-  .top-bar {
-    height: 70px;
   }
   .block-link {
     border-radius: 8px;
@@ -138,9 +137,12 @@ h1 {
     padding-bottom: 7px;
     font-size: 10px !important;
   }
+  .hamburger {
+    top: 13%;
+  }
   header p {
     font-size: 0.85rem;
-    top: 4%;
+    top: 13%;
     color: white;
     text-decoration: none;
   }
