--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -506,15 +506,14 @@ h1 {
   h1 {
     font-size: 2.5rem;
   }
+  .top-bar {
+    height: 125px;
+  }
   .top {
     gap: 8px;
-    top: 3.25%;
   }
   .top a {
     font-size: 14px;
-  }
-  .top-bar {
-    height: 70px;
   }
   .block-link {
     border-radius: 8px;
@@ -524,9 +523,12 @@ h1 {
     padding-bottom: 7px;
     font-size: 10px !important;
   }
+  .hamburger {
+    top: 13%;
+  }
   header p {
     font-size: 0.85rem;
-    top: 4%;
+    top: 13%;
     color: white;
     text-decoration: none;
   }
@@ -802,30 +804,6 @@ footer nav {
   }
   p {
     font-size: 0.85rem;
-  }
-  .top {
-    gap: 8px;
-    top: 3.25%;
-  }
-  .top-bar {
-    height: 70px;
-  }
-  .block-link {
-    border-radius: 8px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    font-size: 10px !important;
-  }
-  .top a {
-    font-size: 14px;
-  }
-  header p {
-    font-size: 0.85rem;
-    top: 4%;
-    color: white;
-    text-decoration: none;
   }
   .section1 {
     margin-top: 10%;
