--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -336,13 +336,17 @@ footer nav {
   margin-top: 2.5%;
   gap: 15px;
 }
+footer nav a {
+  color: black;
+  text-decoration: none;
+  text-decoration: underline;
+}
 
 .credits {
   display: flex;
   justify-content: center;
   text-align: center;
   margin-bottom: 2.5%;
-  margin-top: -5%;
 }
 
 .credits a {
@@ -377,6 +381,7 @@ footer nav {
   text-align: center;
   margin-right: 5%;
   margin-bottom: 2.5%;
+  margin-top: -5%;
 }
 .disclaimer h3 {
   font-size: 1rem;
