--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -317,7 +317,7 @@ header p {
     position: absolute;
     float: left;
     margin-left: 5%;
-    color: black;
+    color: #62A974;
   }
 
   .credits {
