--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -12,64 +12,14 @@
 
 @import 'partials/get-connected-footer';
 
+@import 'partials/header';
+
 html {
   background-color: white !important;
 }
 
 h2 {
   font-size: $font-h2-size;
-}
-
-.top {
-    position: absolute;
-    right: 2.5%;
-    top: 12%;
-    display: flex;
-    gap: 45px;
-    @include center(vertical);
-}
-
-.top a {
-    @include link-style(white);
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.top a:hover {
-    text-decoration: underline;
-}
-
-header p {
-    position: absolute;
-    top: 13%;
-    left: 5%;
-    font-weight: 600;
-    font-size: 30px;
-    @include center(vertical);
-    @include link-style(white);
-}
-
-
-
-.top-bar {
-  position: absolute;
-  top: 0;
-  background-color: black;
-  width: 100vw;
-  height: 165px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: -1;
-}
-
-.block-link {
-    background-color: white;
-    color: black !important;
-    border-radius: 8px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-    @include hover-rise();
 }
 
 
