almost done website

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -645,10 +645,11 @@ footer {
 .tool-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 100px;
-  width: 100%;
+  gap: 50px;
+  width: 80%;
   padding: 20px;
   margin-bottom: 10%;
+  margin: auto;
 }
 
 .tool-card {
@@ -657,10 +658,9 @@ footer {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   transition: transform 0.3s ease;
-  margin-bottom: 10%;
 }
 .tool-card h2 {
-  margin-bottom: 2.5%;
+  margin-top: 2.5%;
 }
 
 .tool-card img {
@@ -668,7 +668,6 @@ footer {
   height: auto;
   border-radius: 4px;
   margin-bottom: 15px;
-  margin-bottom: 10%;
 }
 
 @media screen and (max-width: 768px) {
