--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -491,6 +491,36 @@ header p {
   text-decoration: none !important;
 }
 
+.hoverdown {
+  position: relative;
+}
+.hoverdown .hoverdown-menu {
+  display: none;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 100%;
+  background: black;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  min-width: 150px;
+  z-index: 100;
+  padding: 15px;
+  border-radius: 6px;
+}
+.hoverdown:hover .hoverdown-menu {
+  display: block;
+}
+.hoverdown.show-menu .hoverdown-menu {
+  display: block;
+}
+
+.hoverdown-menu a {
+  font-size: 20px;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: 8px;
+}
+
 .section1 {
   display: flex;
   justify-content: center;
@@ -653,19 +683,6 @@ h1 {
   top: 68%;
   left: -1%;
   flex-direction: row-reverse;
-}
-
-.connection-container {
-  display: flex;
-  gap: 50px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-.connection-container div img {
-  width: 50%;
-  margin-top: 2.5%;
-  margin-bottom: 2.5%;
 }
 
 .connection-container div {
