almost all changes made, almost ready for launch

--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -160,6 +160,23 @@ h1 {
   .hamburger {
     top: 13%;
   }
+  .hoverdown {
+    width: 100%;
+  }
+  .hoverdown > a {
+    display: block;
+    width: 100%;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+  }
+  .hoverdown .hoverdown-menu {
+    position: static;
+    transform: none;
+    left: auto;
+    padding-left: 1rem;
+    background: transparent;
+    box-shadow: none;
+  }
   header p {
     font-size: 0.85rem;
     top: 13%;
