--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -556,6 +556,23 @@ h1 {
   .hamburger {
     top: 13%;
   }
+  .hoverdown {
+    width: 100%;
+  }
+  .hoverdown > a {
+    display: block;
+    width: 100%;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+  }
+  .hoverdown .hoverdown-menu {
+    position: static;
+    transform: none;
+    left: auto;
+    padding-left: 1rem;
+    background: transparent;
+    box-shadow: none;
+  }
   header p {
     font-size: 0.85rem;
     top: 13%;
@@ -1008,6 +1025,6 @@ footer nav {
     align-self: flex-start;
   }
   .social-media {
-    bottom: 80px;
+    bottom: 50px;
   }
 }/*# sourceMappingURL=homestyling.css.map */
