completed tools dropdown for mobile devices

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -148,6 +148,10 @@ h1 {
           padding-left: 1rem;
           background: transparent;
           box-shadow: none;
+
+          a {
+            padding: 10px 0;
+          }
         }
       }
 
