--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -187,6 +187,9 @@ h1 {
     background: transparent;
     box-shadow: none;
   }
+  .hoverdown .hoverdown-menu a {
+    padding: 10px 0;
+  }
   header p {
     font-size: 0.85rem;
     top: 13%;
