--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -28,9 +28,9 @@
     padding-top: 0.8%;
     padding-bottom: 0.8%;
     border-radius: 12px;
-    margin-top: 5%;
+    margin-top: 1.5%;
     margin-bottom: 3%;
-    font-size: 1rem;
+    font-size: 2.5rem;
   }
 }
 .tradingview-widget-container__widget {
@@ -134,6 +134,7 @@ header p {
   display: block;
   padding: 10px 15px;
   margin-bottom: 8px;
+  border-bottom: 1px solid #eee;
 }
 
 .section1 {
