--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -33,6 +33,14 @@
     font-size: 2.5rem;
   }
 }
+@media (min-width: 1367px) {
+  .top {
+    top: 10%;
+  }
+  header p {
+    top: 11%;
+  }
+}
 .tradingview-widget-container__widget {
   min-height: 30px; /* Set a safe minimum height */
   margin-bottom: 10px;
