--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -455,6 +455,14 @@ footer nav a {
     font-size: 2.5rem;
   }
 }
+@media (min-width: 1367px) {
+  .top {
+    top: 10%;
+  }
+  header p {
+    top: 11%;
+  }
+}
 .tradingview-widget-container__widget {
   min-height: 30px; /* Set a safe minimum height */
   margin-bottom: 10px;
