trying this out

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -6,14 +6,15 @@
 @media (min-width: 1367px) {
     
     .top {
-        top: 8%;
+        top: 8% !important;
 
     }
 
     header p {
-        top: 8%;
+        top: 8% !important;
     }
 }
+
 .tradingview-widget-container__widget {
     min-height: 30px;  /* Set a safe minimum height */
     margin-bottom: 10px;
