--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -35,10 +35,10 @@
 }
 @media (min-width: 1367px) {
   .top {
-    top: 8%;
+    top: 8% !important;
   }
   header p {
-    top: 8%;
+    top: 8% !important;
   }
 }
 .tradingview-widget-container__widget {
