--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -45,10 +45,10 @@ html {
 }
 @media (min-width: 1367px) {
   .top {
-    top: 8%;
+    top: 8% !important;
   }
   header p {
-    top: 8%;
+    top: 8% !important;
   }
 }
 .tradingview-widget-container__widget {
