--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -3,18 +3,6 @@
 @import 'links';
 
 
-@media (min-width: 1367px) {
-    
-    .top {
-        top: 8% !important;
-
-    }
-
-    header p {
-        top: 8% !important;
-    }
-}
-
 .tradingview-widget-container__widget {
     min-height: 30px;  /* Set a safe minimum height */
     margin-bottom: 10px;
@@ -191,5 +179,17 @@ h1 {
         margin-top: 10%;
         overflow-x: hidden;
 
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    
+    body .top {
+        top: 8%;
+
+    }
+
+    header p {
+        top: 8%;
     }
 }
