--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -429,14 +429,6 @@ footer nav a {
     font-size: 2.5rem;
   }
 }
-@media (min-width: 1367px) {
-  .top {
-    top: 8% !important;
-  }
-  header p {
-    top: 8% !important;
-  }
-}
 .tradingview-widget-container__widget {
   min-height: 30px; /* Set a safe minimum height */
   margin-bottom: 10px;
@@ -605,6 +597,14 @@ h1 {
   .section1 {
     margin-top: 10%;
     overflow-x: hidden;
+  }
+}
+@media screen and (min-width: 1800px) {
+  body .top {
+    top: 8%;
+  }
+  header p {
+    top: 8%;
   }
 }
 .section1 {
