testing the fix for mobile nav dropdown

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -159,4 +159,12 @@
     #join-us {
       margin-top: -1%;
     }
+
+    .tool-card .download-button {
+      font-size: $font-h2-mobile;
+    }
+
+    .tool-card img {
+      width: 100%;
+    }
 }
