--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -215,10 +215,10 @@ h1 {
 }
 @media screen and (min-width: 1800px) {
   body .top {
-    top: 7%;
+    top: 8%;
   }
   header p {
-    top: 7%;
+    top: 8%;
   }
 }
 .download-button {
@@ -767,5 +767,11 @@ footer {
   }
   #join-us {
     margin-top: -1%;
+  }
+  .tool-card .download-button {
+    font-size: 1.5rem;
+  }
+  .tool-card img {
+    width: 100%;
   }
 }/*# sourceMappingURL=indiv-tool-styling.css.map */
