trying to fix mobile retirement tool boxes margin

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -771,6 +771,9 @@ footer {
   .tool-card .download-button {
     font-size: 1.5rem;
   }
+  .tool-grid {
+    margin-right: 10%;
+  }
   .tool-card img {
     width: 100%;
   }
