--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -164,6 +164,10 @@
       font-size: $font-h2-mobile;
     }
 
+    .tool-grid {
+      margin-right: 10%;
+    }
+
     .tool-card img {
       width: 100%;
     }
